# programs

./: .gitignore  LICENSE.md  README.md
cpp/: .clang-format
cpp/ProjectEuler/: answers
cpp/ProjectEuler/01/: main.cpp
cpp/ProjectEuler/02/: main.cpp
cpp/ProjectEuler/03/: main.cpp
cpp/ProjectEuler/04/: main.cpp
cpp/ProjectEuler/05/: main.cpp  makefile
cpp/ProjectEuler/06/: main.cpp  makefile
cpp/ProjectEuler/07/: main.cpp
cpp/ProjectEuler/08/: main.cpp
cpp/ProjectEuler/09/: main.cpp
cpp/ProjectEuler/1/: main.cpp
cpp/ProjectEuler/10/: main.cpp
cpp/ProjectEuler/11/: main.cpp  makefile
cpp/ProjectEuler/12/: main.cpp
cpp/StreamChecker/: README.md  makefile  project.cpp  project.hpp
cpp/StrimsChecker/: makefile  project.cpp  project.hpp
go/rewrite-jbpratt/: discord-emotes.json  main.go  main.sh
go/streamchecker/: .gitignore  README.md  channels.go  follows.go  gameinfo.go  go.mod  go.sum  main.go  ui.go
go/streamshower/: .gitignore  README.md  config.go  go.mod  go.sum  link.go  main.go  ui.go  ui_input.go  ui_twitch.go
js/Tailsdarcygetter/: README.md  index.js
python/: wininworkspace.py  workspacelisten.py
rust/grades/: Cargo.toml
rust/grades/src/: main.rs  term.rs  ui.rs  uni_info.rs
rust/grades/src/ui/: key.rs  term.rs
rust/grades/src/uni_info/: cursor.rs  print.rs
rust/grades_tui/: Cargo.toml  README.md
rust/grades_tui/src/: main.rs  ui.rs  uni_info.rs
rust/grades_tui/src/ui/: key.rs  term.rs
rust/grades_tui/src/uni_info/: cursor.rs  print.rs
sh/: differ.sh  pull.sh  remoji.sh  runsteam.sh
(+80 files in other folders)
