[package]
name = "grades_tui"
version = "1.2.0"
description = "A terminal program to add and keep track of information regarding unversity undertakings such as grades, averages, and tasks"
repository = "https://github.com/HoppenR/programs/tree/master/rust/grades_tui"
readme = "README.md"
license = "MIT"
keywords = ["grades", "terminal", "statistics"]
edition = "2021"
categories = ["command-line-interface", "command-line-utilities", "management", "school"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.140"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
